# sustainalink-csrd-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  data_pipeline.py  docker-compose.yml  main.py  openapi.json  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml  deploy-rapidapi.yml
config/: esrs_data.py  esrs_standards.json  settings.py
docs/: index.md
docs/api/: endpoints.md
docs/esrs/: standards.md
examples/: quickstart.py
src/: main.py
src/api/: dependencies.py  middleware.py
src/api/routes/: compliance.py  esrs.py  health.py  metrics.py  reports.py
src/database/: models.py  session.py
src/schemas/: responses.py
src/services/: reporting_service.py
tests/: conftest.py  test_api.py
