[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/", "config/"]

[project]
name = "sustainalink-csrd-api"
version = "0.1.0"
description = "A FastAPI-based API for CSRD (Corporate Sustainability Reporting Directive) compliance and ESRS standards management — built by SustainaLink."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

authors = [
  { name = "SustainaLink" },
]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "httpx>=0.27.0",
  "python-dotenv>=1.0",
  "aiosqlite>=0.20",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
